naviバー、フッター追加しました。

--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,67 @@
 
+// -----header-----
+header {
+  padding: 15px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.header-right {
+  ul {
+    display: flex;
+  }
+
+  li {
+    margin-left: 25px;
+    font-size: 20px;
+  }
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
+}
+
+
+// -----kv-----
+.kv-1{
+  width: 460px;
+  height: 224px;
+  left: 81px;
+  top: 120px;
+  background-image: url(./img/kv03.jpg);
+  background-color: aqua;
+}
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// footer
+footer{
+  color: white;
+  background-color: black;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  border: 10px solid black;
+  text-align: center
+}
+
 
 
 
