--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,40 @@
+header {
+  padding: 15px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.header-right ul {
+  display: flex;
+}
+.header-right li {
+  margin-left: 25px;
+  font-size: 20px;
+}
+.header-right a {
+  text-decoration: none;
+  color: black;
+}
+
+.kv-1 {
+  width: 460px;
+  height: 224px;
+  left: 81px;
+  top: 120px;
+  background-image: url(./img/kv03.jpg);
+  background-color: aqua;
+}
+
+footer {
+  color: white;
+  background-color: black;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  border: 10px solid black;
+  text-align: center;
+}
+
 h1 {
   font-size: 40px;
 }/*# sourceMappingURL=style.css.map */
