--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+.container {
+  position: relative;
+  padding-bottom: 60px;
+  box-sizing: border-box;
+  min-height: 100vh;
+}
+
 header {
   padding: 15px;
   display: flex;
@@ -16,16 +23,53 @@ header {
   color: black;
 }
 
-.kv-1 {
+.box-img {
+  position: absolute;
   width: 460px;
   height: 224px;
   left: 81px;
   top: 120px;
   background-image: url(./img/kv03.jpg);
-  background-color: aqua;
+  background-color: pink;
+}
+
+.box-img1 {
+  position: absolute;
+  width: 460px;
+  height: 638px;
+  left: 81px;
+  top: 358px;
+  background: url(./img/kv_02_pc.jpg);
+  background-color: aquamarine;
+}
+
+.box-img2 {
+  position: absolute;
+  width: 460px;
+  height: 638px;
+  left: 980px;
+  top: 105px;
+  background: url(./img/kv01.jpg);
+  background-color: blueviolet;
+}
+
+.box-img3 {
+  position: absolute;
+  width: 460px;
+  height: 224px;
+  left: 980px;
+  top: 755px;
+  background: url(./img/kv_04.jpg);
+  background-color: brown;
+}
+
+.top-kv {
+  background: url(./img/kv_pc.png);
+  background: center;
 }
 
 footer {
+  margin: 200px auto 0;
   color: white;
   background-color: black;
   font-weight: 400;
