headerを変更しました

--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,3 @@
-
 .container {
   position: relative;
   padding-bottom: 60px;
@@ -31,7 +30,7 @@ header {
 
 
 // -----kv-----
-.box-img{
+.box-img {
   position: absolute;
   width: 460px;
   height: 224px;
@@ -40,59 +39,87 @@ header {
   background-image: url(./img/kv03.jpg);
   background-color: pink;
 }
-  
-.box-img1{
-position: absolute;
-width: 460px;
-height: 638px;
-left: 81px;
-top: 358px;
-background: url(./img/kv_02_pc.jpg);
-background-color: aquamarine;
+
+.box-img1 {
+  position: absolute;
+  width: 460px;
+  height: 638px;
+  left: 81px;
+  top: 358px;
+  background-image: url(./);
+  background-color: aquamarine;
 }
 
-.box-img2{
-position: absolute;
-width: 460px;
-height: 638px;
-left: 980px;
-top: 105px;
-background: url(./img/kv01.jpg);
-background-color: blueviolet;
-}
-
-
-.box-img3{
-position: absolute;
-width: 460px;
-height: 224px;
-left: 980px;
-top: 755px;
-background: url(./img/kv_04.jpg);
-background-color: brown;
-}
-
-.top-kv{
-background: url(./img/kv_pc.png);
-background: center;
+.box-img2 {
+  position: absolute;
+  width: 460px;
+  height: 638px;
+  left: 980px;
+  top: 105px;
+  background-image: url(./);
+  background-color: blueviolet;
 }
 
 
+.box-img3 {
+  position: absolute;
+  width: 460px;
+  height: 224px;
+  left: 980px;
+  top: 755px;
+  background-image: url(./);
+  background-color: brown;
+}
+
+.top-kv {
+  background-image: url(./);
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+}
+
+
+.title-wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.main-title {
+  font-size: 125.45px;
+  font-weight: 400;
+  color: black;
+}
+
+.main-title {
+  p {
+    font-size: 48px;
+    font-weight: 400;
+    color: black;
+  }
+}
+
+.main-subtitle {
+  font-size: 58px;
+  font-weight: 400;
+  color: black;
+}
 
 
 
 
 
-// footer
-footer{
-margin:200px auto 0 ;
-color: white;
-background-color: black;
-font-weight: 400;
-font-size: 12px;
-line-height: 14px;
-border: 10px solid black;
-text-align: center
+// -----footer-----
+footer {
+  position: absolute;
+  left: 1.45%;
+  right: 1.64%;
+  top: 99.3%;
+  bottom: 0.15%;
+  background: black;
+  border: 1.43px solid black‹›;
 }
 
 
@@ -102,6 +129,14 @@ text-align: center
 
 
 
+// レスポンシブ対応
+@media screen and (max-width: 767px) {
+  header {
+    position: fixed;
+    width: 100%;
+    overflow: hidden;
+    width: 100%;
+  }
 
 
 
@@ -112,4 +147,8 @@ text-align: center
 
 
 
-@import "./fujioka";
+
+
+
+
+  @import "./fujioka";
