--- a/style.scss
+++ b/style.scss
@@ -36,7 +36,7 @@ header {
   height: 224px;
   left: 81px;
   top: 120px;
-  background-image: url(./img/kv03.jpg);
+  background-image: url(./img/kv_01_pc.jpg);
   background-color: pink;
 }
 
