--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,7 +2,7 @@
   position: relative;
   padding-bottom: 60px;
   box-sizing: border-box;
-  min-height: 100vh;
+  
 }
 
 // -----header-----
@@ -15,6 +15,8 @@ header {
 .header-right {
   ul {
     display: flex;
+    justify-content: end;
+  
   }
 
   li {
@@ -36,7 +38,7 @@ header {
   height: 224px;
   left: 81px;
   top: 120px;
-  background-image: url(./img/kv_01_pc.jpg);
+  background-image: url(../../img/kv_01_pc.jpg);
   background-color: pink;
 }
 
@@ -46,7 +48,7 @@ header {
   height: 638px;
   left: 81px;
   top: 358px;
-  background-image: url(./img/kv_02_pc.jpg);
+  background-image: url(../../img/kv_02_pc.jpg);
   background-color: aquamarine;
 }
 
@@ -88,7 +90,7 @@ header {
 }
 
 .main-title {
-  font-size: 125.45px;
+  font-size: 45px;
   font-weight: 400;
   color: black;
 }
