--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ header {
   height: 638px;
   left: 81px;
   top: 358px;
-  background-image: url(./img/kv_02_pc.jpg);
+  background-image: url(../../img/kv_02_pc.jpg);
   background-color: aquamarine;
 }
 
