--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ header {
   height: 638px;
   left: 81px;
   top: 358px;
-  background-image: url(./img/kv_02_pc.jpg);
+  background-image: url(../../img/kv_02_pc.jpg);
   background-color: aquamarine;
 }
 
@@ -81,11 +81,7 @@ header {
 }
 
 .main-title {
-<<<<<<< HEAD
-  font-size: 125.45px;
-=======
   font-size: 45px;
->>>>>>> 647907467ede1404e9174e3d8852988464f29faf
   font-weight: 400;
   color: black;
 }
@@ -139,15 +135,9 @@ header {
   width: 100%;
   height: auto;
   background-image: url(./img/deco_01.png), url(./img/deco_02.png), url(./img/deco_03.png), url(./img/deco_04.png), url(./img/deco_05.png), url(./img/deco_06.png), url(./img/deco_07.png), url(./img/deco_08.png), url(./img/deco_09.png), url(./img/deco_10.png);
-<<<<<<< HEAD
   background-repeat: no-repeat,no-repeat;
   background-size: 20% , 5%;
   background-position: bottom right,top left;
-=======
-  background-repeat: no-repeat, no-repeat;
-  background-size: 20%, 5%;
-  background-position: bottom right, top left;
->>>>>>> 647907467ede1404e9174e3d8852988464f29faf
 }
 
 .card-skin {
@@ -188,10 +178,4 @@ footer {
     width: 100%;
   }
 }
-<<<<<<< HEAD
 /*# sourceMappingURL=style.css.map */
-=======
-h1 {
-  font-size: 40px;
-}/*# sourceMappingURL=style.css.map */
->>>>>>> 647907467ede1404e9174e3d8852988464f29faf
