--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,10 +14,12 @@ header {
   display: flex;
   justify-content: end;
 }
+
 .header-right li {
   margin-left: 25px;
   font-size: 20px;
 }
+
 .header-right a {
   text-decoration: none;
   color: black;
@@ -130,15 +132,9 @@ header {
   width: 100%;
   height: auto;
   background-image: url(./img/deco_01.png), url(./img/deco_02.png), url(./img/deco_03.png), url(./img/deco_04.png), url(./img/deco_05.png), url(./img/deco_06.png), url(./img/deco_07.png), url(./img/deco_08.png), url(./img/deco_09.png), url(./img/deco_10.png);
-<<<<<<< HEAD
-  background-repeat: no-repeat, no-repeat;
-  background-size: 20%, 5%;
-  background-position: bottom right, top left;
-=======
   background-repeat: no-repeat,no-repeat;
   background-size: 20% , 5%;
   background-position: bottom right,top left;
->>>>>>> ab35639bb9513a6af29cb2a6945613c26aa11ea7
 }
 
 .card-skin {
@@ -168,9 +164,209 @@ header {
     overflow: hidden;
     width: 100%;
   }
-<<<<<<< HEAD
-}/*# sourceMappingURL=style.css.map */
-=======
+}
+
+.pet-livers h1 {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 80px;
+  line-height: 95px;
+  color: #000000;
+  text-align: center;
+}
+
+.pet-livers .container-livers {
+  background-color: #000000;
+  width: 2000px;
+  height: 1350px;
+}
+
+.pet-livers .livers {
+  width: 382px;
+  height: 569px;
+  background: #FFFFFF;
+}
+
+.pet-livers .livers img {
+  width: 370px;
+  height: 347px;
+}
+
+.pet-livers .livers #Alice {
+  width: 382px;
+  height: 569px;
+  border: 3.79px solid #EA5555;
+}
+
+.pet-livers .livers #Nancy {
+  border: 4.42px solid #A817FB;
+}
+
+.pet-livers .livers #Mat {
+  border: 3.15px solid #F0C83B;
+}
+
+.pet-livers .livers #Oscar {
+  border: 3.79px solid #E16A6E;
+}
+
+.pet-livers .livers #Nataly {
+  border: 3.15px solid #ED61F6;
+}
+
+.pet-livers .livers #Zach {
+  border: 3.79px solid #52F1BF;
+}
+
+.pet-livers .livers #John {
+  border: 3.79px solid #55B0EA;
+}
+
+.pet-livers .livers #Simona {
+  border: 3.79px solid #FFB017;
+}
+
+.sponser {
+  max-width: 1170px;
+  margin: 0 auto;
+}
+
+.sponser h1 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 80px;
+  line-height: 116px;
+  color: #000000;
+  text-align: center;
+}
+
+.sponser .container-sponser {
+  margin: 0 auto;
+}
+
+.sponser .container-sponser #animal-rights {
+  width: 1410px;
+  height: 649px;
+  margin: 0 auto;
+}
+
+.sponser .container-sponser #animal-foundation {
+  width: 580px;
+  height: 457px;
+  margin: 0 auto;
+}
+
+.sponser h5 {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 47px;
+  color: #000000;
+  text-align: center;
+}
+
+.customer-voice {
+  max-width: 1170px;
+}
+
+.customer-voice h1 {
+  font-family: 'ABeeZee';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 47px;
+  color: #000000;
+  text-align: center;
+}
+
+.customer-voice .container-customer-voice {
+  display: flex;
+  margin: 0 auto;
+}
+
+.customer-voice .container-customer-voice img {
+  width: 639px;
+  height: 881px;
+  box-shadow: 15px 15px 0px 0 #E7AFC3;
+}
+
+.customer-voice .container-customer-voice .voice-right h4 {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 38px;
+  /* identical to box height */
+  color: #000000;
+}
+
+.customer-voice .container-customer-voice .voice-right h3 {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 50px;
+  line-height: 59px;
+  color: #000000;
+}
+
+.customer-voice .container-customer-voice .voice-right p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 43px;
+  letter-spacing: -0.03em;
+  color: #000000;
+}
+
+.company {
+  max-width: 1170px;
+  margin: 0 auto;
+}
+
+.company h1 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 80px;
+  line-height: 116px;
+  color: #000000;
+  text-align: center;
+}
+
+.company .container-company {
+  margin-left: 250px;
+  display: flex;
+  justify-content: center;
+}
+
+.company .container-company .company-left {
+  margin-left: 250px;
+}
+
+.company .container-company .company-left h2 {
+  font-style: normal;
+  font-size: 96px;
+  color: #000000;
+  margin-left: 250px;
+}
+
+.company .container-company .company-left h3 {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 50px;
+  line-height: 59px;
+  /* identical to box height */
+  color: #000000;
+}
+
+.company .container-company .company-left p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 47px;
+  color: #000000;
+}
+
+.company .container-company .company-right iframe {
+  width: 787px;
+  height: 723px;
+  margin-right: 209px;
 }
 /*# sourceMappingURL=style.css.map */
->>>>>>> ab35639bb9513a6af29cb2a6945613c26aa11ea7
