--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,207 +166,46 @@ header {
   }
 }
 
+.pet-livers {
+  margin: 0 auto;
+}
+
 .pet-livers h1 {
-  font-style: normal;
-  font-weight: 400;
   font-size: 80px;
-  line-height: 95px;
-  color: #000000;
   text-align: center;
 }
 
 .pet-livers .container-livers {
-  background-color: #000000;
-  width: 2000px;
   height: 1350px;
+  margin: 61px 0x 0px 0px;
+  background-color: black;
 }
 
-.pet-livers .livers {
+.pet-livers .container-livers .box-livers1 {
+  display: flex;
+}
+
+.pet-livers .container-livers .box-livers2 {
+  display: flex;
+}
+
+.pet-livers .container-livers .livers {
   width: 382px;
   height: 569px;
-  background: #FFFFFF;
-}
-
-.pet-livers .livers img {
-  width: 370px;
-  height: 347px;
-}
-
-.pet-livers .livers #Alice {
-  width: 382px;
-  height: 569px;
-  border: 3.79px solid #EA5555;
-}
-
-.pet-livers .livers #Nancy {
-  border: 4.42px solid #A817FB;
-}
-
-.pet-livers .livers #Mat {
-  border: 3.15px solid #F0C83B;
-}
-
-.pet-livers .livers #Oscar {
-  border: 3.79px solid #E16A6E;
-}
-
-.pet-livers .livers #Nataly {
-  border: 3.15px solid #ED61F6;
-}
-
-.pet-livers .livers #Zach {
-  border: 3.79px solid #52F1BF;
-}
-
-.pet-livers .livers #John {
-  border: 3.79px solid #55B0EA;
-}
-
-.pet-livers .livers #Simona {
-  border: 3.79px solid #FFB017;
-}
-
-.sponser {
-  max-width: 1170px;
-  margin: 0 auto;
 }
 
 .sponser h1 {
-  font-style: normal;
-  font-weight: 700;
   font-size: 80px;
-  line-height: 116px;
-  color: #000000;
   text-align: center;
 }
 
-.sponser .container-sponser {
-  margin: 0 auto;
-}
-
-.sponser .container-sponser #animal-rights {
-  width: 1410px;
+.sponser #animal-rights {
+  width: 800px;
   height: 649px;
-  margin: 0 auto;
-}
-
-.sponser .container-sponser #animal-foundation {
-  width: 580px;
-  height: 457px;
-  margin: 0 auto;
 }
 
 .sponser h5 {
-  font-style: normal;
-  font-weight: 400;
   font-size: 40px;
-  line-height: 47px;
-  color: #000000;
   text-align: center;
-}
-
-.customer-voice {
-  max-width: 1170px;
-}
-
-.customer-voice h1 {
-  font-family: 'ABeeZee';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 40px;
-  line-height: 47px;
-  color: #000000;
-  text-align: center;
-}
-
-.customer-voice .container-customer-voice {
-  display: flex;
-  margin: 0 auto;
-}
-
-.customer-voice .container-customer-voice img {
-  width: 639px;
-  height: 881px;
-  box-shadow: 15px 15px 0px 0 #E7AFC3;
-}
-
-.customer-voice .container-customer-voice .voice-right h4 {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 38px;
-  /* identical to box height */
-  color: #000000;
-}
-
-.customer-voice .container-customer-voice .voice-right h3 {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 50px;
-  line-height: 59px;
-  color: #000000;
-}
-
-.customer-voice .container-customer-voice .voice-right p {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 36px;
-  line-height: 43px;
-  letter-spacing: -0.03em;
-  color: #000000;
-}
-
-.company {
-  max-width: 1170px;
-  margin: 0 auto;
-}
-
-.company h1 {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 80px;
-  line-height: 116px;
-  color: #000000;
-  text-align: center;
-}
-
-.company .container-company {
-  margin-left: 250px;
-  display: flex;
-  justify-content: center;
-}
-
-.company .container-company .company-left {
-  margin-left: 250px;
-}
-
-.company .container-company .company-left h2 {
-  font-style: normal;
-  font-size: 96px;
-  color: #000000;
-  margin-left: 250px;
-}
-
-.company .container-company .company-left h3 {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 50px;
-  line-height: 59px;
-  /* identical to box height */
-  color: #000000;
-}
-
-.company .container-company .company-left p {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 40px;
-  line-height: 47px;
-  color: #000000;
-}
-
-.company .container-company .company-right iframe {
-  width: 787px;
-  height: 723px;
-  margin-right: 209px;
 }
 /*# sourceMappingURL=style.css.map */
