--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,4 @@
-.container {
-  position: relative;
-  padding-bottom: 60px;
-  box-sizing: border-box;
-}
-
 header {
-  padding: 15px;
   display: flex;
   justify-content: flex-end;
 }
@@ -13,10 +6,12 @@ header {
 .header-right ul {
   display: flex;
   justify-content: end;
+  margin-top: -90px;
 }
 .header-right li {
-  margin-left: 25px;
-  font-size: 20px;
+  margin-left: 43px;
+  padding: 0;
+  font-size: 28px;
 }
 .header-right a {
   text-decoration: none;
@@ -26,82 +21,104 @@ header {
 .box-img {
   position: absolute;
   width: 460px;
-  height: 224px;
-  left: 81px;
-  top: 120px;
+  height: 220px;
+  top: 95px;
+  left: 40px;
+  bottom: 10px;
   background-image: url(../../img/kv_03_pc.jpg);
+  background-size: cover;
 }
 
 .box-img1 {
   position: absolute;
   width: 460px;
   height: 638px;
-  left: 81px;
-  top: 358px;
+  left: 40px;
+  top: 326px;
   background-image: url(../../img/kv_02_pc.jpg);
+  background-size: cover;
 }
 
 .box-img2 {
   position: absolute;
-  width: 460px;
+  width: 420px;
   height: 638px;
-  left: 980px;
-  top: 105px;
+  right: 40px;
+  top: 95px;
   background-image: url(../../img/kv_01_pc.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .box-img3 {
   position: absolute;
-  width: 460px;
+  width: 420px;
   height: 224px;
-  left: 980px;
-  top: 755px;
+  right: 40px;
+  top: 741px;
   background-image: url(../../img/kv_04_pc.jpg);
-  background-color: brown;
-}
-
-.top-kv {
-  background-image: url(../../img/kv_pc.png);
-  background-position: center;
-  background-size: cover;
-  height: 100vh;
-}
-
-.title-wrap {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .main-title {
-  font-size: 45px;
-  font-weight: 400;
-  color: black;
-}
-
-.main-title p {
-  font-size: 48px;
-  font-weight: 400;
-  color: black;
-}
-
-.main-subtitle {
   font-size: 58px;
-  font-weight: 400;
+  font-weight: bold;
   color: black;
+  position: absolute;
+  top: 420px;
+  left: 570px;
+}
+
+.title-wrap {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+}
+.title-wrap p {
+  font-size: 30px;
+  position: absolute;
+  top: 80px;
+  left: 570px;
+}
+
+.title-wrap2 {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+}
+.title-wrap2 p {
+  font-size: 30px;
+  position: absolute;
+  top: 100px;
+  left: 570px;
+}
+
+.title-wrap3 {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+}
+.title-wrap3 p {
+  font-size: 25px;
+  position: absolute;
+  top: 50px;
+  left: px;
 }
 
 .container-wrap {
   max-width: 1170px;
   margin: 100px auto 0;
-  background-image: url(./img/);
 }
 
-.subtitle {
-  font-size: 50px;
-  font-weight: 900;
+#About {
+  font-size: 20px;
   color: blackr;
   text-align: center;
 }
@@ -110,7 +127,7 @@ header {
   display: flex;
   align-items: center;
   text-align: start;
-  margin-top: 60px;
+  margin-top: 20px;
 }
 
 #About .container {
@@ -118,47 +135,82 @@ header {
 }
 
 .description {
-  margin-left: 50px;
+  margin-left: 20px;
 }
 
 #About .description {
   margin-left: auto;
-  margin-right: 50px;
+  margin-right: 100px;
 }
 
 .mulch-deco {
   width: 100%;
   height: auto;
-  background-image: url(./img/deco_01.png), url(./img/deco_02.png), url(./img/deco_03.png), url(./img/deco_04.png), url(./img/deco_05.png), url(./img/deco_06.png), url(./img/deco_07.png), url(./img/deco_08.png), url(./img/deco_09.png), url(./img/deco_10.png);
-<<<<<<< HEAD
+  background-image: url(../../img/deco_01.png), url(../../img/deco_02.png), url(../../img/deco_03.png), url(../../img/deco_04.png), url(../../img/deco_05.png), url(../../img/deco_06.png), url(../../img/deco_07.png), url(../../img/deco_08.png), url(../../img/deco_09.png), url(../../img/deco_10.png);
   background-repeat: no-repeat, no-repeat;
   background-size: 20%, 5%;
   background-position: bottom right, top left;
-=======
-  background-repeat: no-repeat,no-repeat;
-  background-size: 20% , 5%;
-  background-position: bottom right,top left;
->>>>>>> ab35639bb9513a6af29cb2a6945613c26aa11ea7
 }
 
 .card-skin {
   position: relative;
-  box-shadow: 15px 15px 0px 0 #F9C83B;
+  box-shadow: 15px 15px 0 #F9C83B;
 }
 
 .card-skin2 {
   position: relative;
-  box-shadow: 15px 15px 0px 0 #FFF835;
+  box-shadow: -15px 15px 0 #FFF835;
 }
 
-.card-skin {
-  position: relative;
-  box-shadow: 15px 15px 0px 0 #F9C83B;
+.container {
+  padding: 100px 0px 0px;
+  margin: 0px 70px;
 }
 
-.card-skin2 {
+.container-wrap {
+  max-width: 1170px;
+  display: block;
+  padding: 50px 0px;
+  margin-left: 50px;
+  margin-top: 40px;
+}
+
+h1 {
+  font-size: 40px;
+  font-weight: 900;
+  text-align: center;
+}
+
+p {
+  margin-top: 5px;
+}
+
+.about-right {
+  display: flex;
+}
+
+.plan {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 70px;
+}
+
+.box {
+  width: 400px;
+  height: 600px;
+  border: solid 1px black;
+}
+
+.description {
+  text-align: center;
+  line-height: 1;
+  margin: 0px 10px;
+  padding-top: 10px;
+}
+
+.card-skin3 {
   position: relative;
-  box-shadow: 15px 15px 0px 0 #FFF835;
+  box-shadow: 15px 15px 0px 0 #9067E9;
 }
 
 @media screen and (max-width: 767px) {
@@ -168,9 +220,4 @@ header {
     overflow: hidden;
     width: 100%;
   }
-<<<<<<< HEAD
 }/*# sourceMappingURL=style.css.map */
-=======
-}
-/*# sourceMappingURL=style.css.map */
->>>>>>> ab35639bb9513a6af29cb2a6945613c26aa11ea7
