--- a/assets/scss/_fujioka.scss
+++ b/assets/scss/_fujioka.scss
@@ -294,14 +294,15 @@
 
 // sponser
 .sponser{
+  width: 1170px;
+
   h1{
     font-size: 80px;
     text-align: center;
   }
 
   #animal-rights{
-    width: 800px;
-    height: 649px;
+    justify-items: center;
   }
 
 
