--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,11 +8,13 @@ header {
   justify-content: end;
   margin-top: -90px;
 }
+
 .header-right li {
   margin-left: 43px;
   padding: 0;
   font-size: 28px;
 }
+
 .header-right a {
   text-decoration: none;
   color: black;
@@ -225,31 +227,43 @@ p {
     width: 100%;
   }
 }
-<<<<<<< HEAD
 
-=======
->>>>>>> bda6ba6895d86fbaad3c6f498229f85df0ffeb3d
+* {
+  border: solid gold 1px;
+}
+
 .pet-livers {
   margin: 0 auto;
 }
+
 .pet-livers h1 {
   font-size: 80px;
   text-align: center;
 }
+
 .pet-livers .container-livers {
-  height: 1350px;
-  margin: 61px 0x 0px 0px;
-  background-color: black;
+  height: 1000px;
+  background-color: gray;
 }
+
 .pet-livers .container-livers .box-livers1 {
   display: flex;
+  justify-content: space-around;
+  padding-left: 10.6%;
+  padding-right: 10.8%;
 }
+
 .pet-livers .container-livers .box-livers2 {
   display: flex;
+  justify-content: space-around;
+  padding-left: 10.6%;
+  padding-right: 10.8%;
 }
+
 .pet-livers .container-livers .livers {
-  width: 382px;
-  height: 569px;
+  width: 19%;
+  height: 28.4%;
+  border: solid pink 1px;
 }
 
 .sponser {
@@ -260,15 +274,13 @@ p {
   font-size: 80px;
   text-align: center;
 }
+
 .sponser #animal-rights {
   justify-items: center;
 }
+
 .sponser h5 {
   font-size: 40px;
   text-align: center;
-<<<<<<< HEAD
 }
 /*# sourceMappingURL=style.css.map */
-=======
-}/*# sourceMappingURL=style.css.map */
->>>>>>> bda6ba6895d86fbaad3c6f498229f85df0ffeb3d
